# expense-tracker

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  expense_tracker.py  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/workflows/: python-app.yml  release.yml
expense_tracker/: __init__.py  __main__.py  cli.py
expense_tracker/models/: __init__.py  expense.py  expense_manager.py
expense_tracker/services/: __init__.py  expense_manager.py  storage.py
expense_tracker/ui/: __init__.py  expense_view.py  widgets.py
expense_tracker/views/: __init__.py  expense_view.py
expense_tracker/web/: app.py  config.py
expense_tracker/web/static/css/: style.css
expense_tracker/web/static/js/: main.js
expense_tracker/web/templates/: base.html  expenses.html  index.html  settings.html  stats.html
tests/: test_cli.py
tests/ui/: README.md  conftest.py  test_expense_view.py  test_web_interface.py  test_widgets.py
