[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker"
version = "1.0.0"
description = "A web-based application for tracking and visualizing expenses"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "flask>=3.0.2",
    "flask-wtf>=1.2.1",
    "pandas>=2.0.3",
    "matplotlib>=3.7.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "black>=24.3.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=23.9.16",
    "flake8-comprehensions>=3.14.0",
    "flake8-simplify>=0.21.0",
    "mypy>=1.7.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "selenium>=4.11.2",
    "webdriver-manager>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Jacques-Murray/expense-tracker"
"Bug Tracker" = "https://github.com/Jacques-Murray/expense-tracker/issues"
